<resources>
    <string name="app_name">WeatherAppOnline</string>

    <string name="celsius_and_grade">°C</string>
    <string name="search_city_dialog">Search city</string>
    <string name="city_not_found">Don\'t found that city</string>
    <string name="min_temp_title_txt">Min temp:</string>
    <string name="max_temp_title_txt">Max temp:</string>
    <string name="pressure_title_txt">Pressure:</string>
    <string name="hpa_metric_txt">hPa</string>
    <string name="humidity_title_txt">Humidity:</string>
    <string name="percent_sign">%</string>
    <string name="wind_title_txt">Wind:</string>

    <string name="wi_owm_200">&#xf01e;</string>
    <string name="wi_owm_201">&#xf01e;</string>
    <string name="wi_owm_202">&#xf01e;</string>
    <string name="wi_owm_210">&#xf016;</string>
    <string name="wi_owm_211">&#xf016;</string>
    <string name="wi_owm_212">&#xf016;</string>
    <string name="wi_owm_221">&#xf016;</string>
    <string name="wi_owm_230">&#xf01e;</string>
    <string name="wi_owm_231">&#xf01e;</string>
    <string name="wi_owm_232">&#xf01e;</string>
    <string name="wi_owm_300">&#xf01c;</string>
    <string name="wi_owm_301">&#xf01c;</string>
    <string name="wi_owm_302">&#xf019;</string>
    <string name="wi_owm_310">&#xf017;</string>
    <string name="wi_owm_311">&#xf019;</string>
    <string name="wi_owm_312">&#xf019;</string>
    <string name="wi_owm_313">&#xf01a;</string>
    <string name="wi_owm_314">&#xf019;</string>
    <string name="wi_owm_321">&#xf01c;</string>
    <string name="wi_owm_500">&#xf01c;</string>
    <string name="wi_owm_501">&#xf019;</string>
    <string name="wi_owm_502">&#xf019;</string>
    <string name="wi_owm_503">&#xf019;</string>
    <string name="wi_owm_504">&#xf019;</string>
    <string name="wi_owm_511">&#xf017;</string>
    <string name="wi_owm_520">&#xf01a;</string>
    <string name="wi_owm_521">&#xf01a;</string>
    <string name="wi_owm_522">&#xf01a;</string>
    <string name="wi_owm_531">&#xf01d;</string>
    <string name="wi_owm_600">&#xf01b;</string>
    <string name="wi_owm_601">&#xf01b;</string>
    <string name="wi_owm_602">&#xf0b5;</string>
    <string name="wi_owm_611">&#xf017;</string>
    <string name="wi_owm_612">&#xf017;</string>
    <string name="wi_owm_615">&#xf017;</string>
    <string name="wi_owm_616">&#xf017;</string>
    <string name="wi_owm_620">&#xf017;</string>
    <string name="wi_owm_621">&#xf01b;</string>
    <string name="wi_owm_622">&#xf01b;</string>
    <string name="wi_owm_701">&#xf01a;</string>
    <string name="wi_owm_711">&#xf062;</string>
    <string name="wi_owm_721">&#xf0b6;</string>
    <string name="wi_owm_731">&#xf063;</string>
    <string name="wi_owm_741">&#xf014;</string>
    <string name="wi_owm_761">&#xf063;</string>
    <string name="wi_owm_762" id="200">&#xf063;</string>
    <string name="wi_owm_771">&#xf011;</string>
    <string name="wi_owm_781">&#xf056;</string>
    <string name="wi_owm_800">&#xf00d;</string>
    <string name="wi_owm_801">&#xf011;</string>
    <string name="wi_owm_802">&#xf011;</string>
    <string name="wi_owm_803">&#xf012;</string>
    <string name="wi_owm_804">&#xf013;</string>
    <string name="wi_owm_900">&#xf056;</string>
    <string name="wi_owm_901">&#xf01d;</string>
    <string name="wi_owm_902">&#xf073;</string>
    <string name="wi_owm_903">&#xf076;</string>
    <string name="wi_owm_904">&#xf072;</string>
    <string name="wi_owm_905">&#xf021;</string>
    <string name="wi_owm_906">&#xf015;</string>
    <string name="wi_owm_957">&#xf050;</string>
    <string name="inet_problem_local_weather">Internet connection problem. Loading local weather map</string>
    <string name="inet_problem">Internet connection problem</string>

    <string name="km_h"> km/h</string>
    <string name="weather_today_tab">Weather today</string>
    <string name="_3_day_forecast_tab">3 day forecast</string>
    <string name="degree_symbol">°</string>
    <string name="wind_title_forecast">Wind:</string>


</resources>
