<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/date_for_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/small_value_to_title_margin">

        <TextView
            android:id="@+id/day_of_week_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/forecast_day_week_txt_size"
            tools:text="Sun" />

        <TextView
            android:id="@+id/date_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/forecast_date_txt_size"
            tools:text="17.02.18." />
    </LinearLayout>

    <TextView
        android:id="@+id/time_forecast"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="@dimen/forecast_time_txt_size"
        tools:text="18:00" />

    <TextView
        android:id="@+id/forecast_icon_item"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/forecast_icon_size"
        tools:text="(%)" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:id="@+id/forecast_temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/forecast_temp_txt_size"
            tools:text="+32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/degree_symbol"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/forecast_temp_txt_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forecast_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/forecast_description_txt_size"
            tools:text="light rain" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_title_forecast"
                android:textSize="@dimen/forecast_description_txt_size" />

            <TextView
                android:id="@+id/wind_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/forecast_description_txt_size"
                tools:text="25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_h"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>